--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 
 after_script:
   - grunt build
-  - cd ./dist
+  - cd ./distt
   - git init
   - git config user.name "${USER_NAME}"
   - git config user.email "${USER_EMAIL}"
