--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ after_script:
   - cd ./distt
   - git init
   - git config user.name "${USER_NAME}"
-  - git config user.email "${USER_EMAIL}"
+  - git config user.email "${uu:USER_EMAIL}"
   - git add .
   - git commit -m "publish jsnotepad"
   - git push --force --quiet "https://${ACC_TOKEN}@${GH_REF}" master:${BRANCH}
